syntax = "proto3";

package examples.helloworld;

import "github.com/let-z-go/gogorpc/gogorpc.proto";

option go_package = "github.com/let-z-go/gogorpc/examples/helloworld/proto";

option (gogorpc.error) = {
    code: "ForbiddenName"
    type: 403
};

service Greeter {
    rpc SayHello (SayHelloReq) returns (SayHelloResp);
    rpc SayHello2 (SayHelloReq) returns (gogorpc.Void);
    rpc SayHello3 (gogorpc.Void) returns (SayHelloResp);
}

message SayHelloReq {
    string name = 1;
}

message SayHelloResp {
    string message = 1;
}
